--- a/chamber/styles/discover.css
+++ b/chamber/styles/discover.css
@@ -99,3 +99,9 @@ footer {
   color: #888;
   font-size: 0.9rem;
 }
+
+.header-title {
+  font-size: 2.5rem;
+  color: white;
+  margin-bottom: 0.5rem;
+}
